--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -21,12 +21,12 @@
           p.text-dark= t('users.show.letter_unit', count: @letters.sent.count)
         .w-80
           p.mb-0.small= t('users.show.not_send_letter')
-          p#js-modal-open.text-dark= t('users.show.letter_unit', count: @letters.not_send.count)
+          p.text-dark= t('users.show.letter_unit', count: @letters.not_send.count)
     .record-field.mb-3
       .text-center
         p.mb-0.small= t('users.show.count')
         p.text-dark= t('users.show.record_unit', count: @records.count)
-      .d-flex.justify-content-evenly.px-3.mb-3.text-center
+      .d-flex.justify-content-evenly.px-3.text-center
         .w-80
           p.mb-0.small= t('users.show.checked_record')
           p.text-dark= t('users.show.record_unit', count: @records.checked.count)
@@ -34,6 +34,8 @@
           p.mb-0.small= t('users.show.sent_record')
           p.text-dark= t('users.show.record_unit', count: @records.sent.where(state: 'sent').count)
         .w-80
-          p.mb-0.small= t('users.show.not_send_record')
-          p#js-modal-open.text-dark= t('users.show.record_unit', count: @records.not_send.count)
+          p.mb-0.small= t('users.show.draft_record')
+          p.text-dark= t('users.show.record_unit', count: @records.draft.count)
+      .d-flex.justify-content-evenly.px-5.mb-3.text-center
+        = pie_chart @result.group(:result).count, library: { title: { text: "回答数<br> #{@result.count}問" } }
       = link_to t('users.show.records_path'), records_path, class: 'btn btn-outline-dark'
