--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,6 +1,10 @@
-= javascript_pack_tag 'users/show'
+/ = javascript_pack_tag 'users/show'
+/ .container.mx-auto.py-5
+/   .bg-white.text-center.p-2.rounded-3
+/     = image_tag 'users/default.png', id: 'picture', class: 'rounded-circle mt-4', style: "width: 80px;"
+/     p#name.mt-2.text-dark
 
 .container.mx-auto.py-5
-  .bg-white.text-center.p-2.rounded-3
-    = image_tag 'users/default.png', id: 'picture', class: 'rounded-circle mt-4', style: "width: 80px;"
-    p#name.mt-2.text-dark
+  - @events.each do |event|
+    .bg-white.p-2.rounded-3.my-2.p-3
+      p.m-0= event["title"]
